[tool.poetry]
name = "yeet"
version = "0.1.0"
description = ""
authors = ["Alex Davies <traverse.da@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.20.1"
typer = "^0.4.0"
click = "8.0.4"
loguru = "^0.6.0"
blinker = "^1.4"
appdirs = "^1.4.4"
msgpack = "^1.0.3"
shortuuid = "^1.0.8"
persist-queue = {extras = ["extra"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
